<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#F0F4F8">

    <ImageButton
        android:id="@+id/bouton_retour"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:backgroundTint="#102A43"
        android:contentDescription="@string/bouton_retour"
        android:scaleType="centerInside"
        android:src="@drawable/ic_fleche_retour" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titre_choix_mode"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#102A43"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regles_jeu"
            android:textSize="18sp"
            android:textColor="#333333"
            android:lineSpacingExtra="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:elevation="6dp"
        android:padding="24dp"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/bouton_mode_classique"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#102A43"
            android:text="@string/bouton_classique"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bouton_mode_competition"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/bouton_competition"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="#FF9800" />

    </LinearLayout>
</LinearLayout>