<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_horizontal"
    android:background="#F0F4F8">

    <ImageButton
        android:id="@+id/bouton_retour"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:backgroundTint="#2196F3"
        android:src="@drawable/ic_fleche_retour"
        android:contentDescription="@string/bouton_retour"
        android:scaleType="centerInside" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/titre_top10"
    android:textSize="36sp"
    android:textStyle="bold"
    android:textColor="#102A43"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:elevation="6dp"
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/texte_scores_liste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aucun_score"
            android:textSize="24sp"
            android:textColor="#333333"
            android:lineSpacingExtra="14dp"
            android:gravity="center"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>